--- a/bbbroom/templates/join.html
+++ b/bbbroom/templates/join.html
@@ -15,7 +15,7 @@
     </header>
 
     <div>
-      <a href=/whiteboard>
+      <a href=/join_meeting>
         <span>Meeting beitreten</span>
       </a>
     </div>
