--- a/bbbroom/templates/presets.html
+++ b/bbbroom/templates/presets.html
@@ -13,14 +13,14 @@
 
 		<div>
 
-		<a href=#/camera>
+		<a href=/join>
 			<i data-feather="video"></i>
-			Camera
+			Join
 		</a>
-		<a href=/whiteboard>
+		<!-- <a href=/whiteboard>
 			<i data-feather="airplay"></i>
 			Whiteboard
-		</a>
+		</a> -->
 
 		</div>
 
