--- a/bbbroom/static/style.css
+++ b/bbbroom/static/style.css
@@ -4,16 +4,19 @@ body {
 	color: white;
 	font-family: sans;
 	text-align: center;
+  height: 100vh;
 }
 
 div {
 	display: flex;
+  flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
+  gap: 10px;
+  height: calc(100% - 160px);
 }
 
-img {
+.logo {
 	position: absolute;
 	width: 150px;
 	top: 0;
@@ -33,6 +36,21 @@ a {
 
 a:hover {
 	background-color: #555;
+}
+
+header {
+  height: 40px;
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 40px;
+}
+
+span {
+  text-align: center;
+  color: white;
+  font-size: 30px;
 }
 
 .feather {
